Bug 1250143. Account for border/padding on outer <svg> elements in GeometryUtils. r=mats

MozReview-Commit-ID: KwEwnukNgeF